--- a/html/pages/signup/css/signupstyle.css
+++ b/html/pages/signup/css/signupstyle.css
@@ -32,6 +32,10 @@
     float: left;
     height: 20px;
 }
+
+#fbpane #label.loading{
+    background: url('http://cdn.athletez.com/resources/img/blue_loading.gif') repeat;
+}
 #regpanemain{
 		position: absolute;
 		width: 547PX;
@@ -185,16 +189,8 @@
 			color:black;
 			background-color: white;
 		}
-		.firstdiv,.seconddiv,.thirddiv,.fourthdiv,.fifthdiv,.sixthdiv,.seventhdiv{
 
-		}
-		#finalreg input[type="text"]{
-			width: 235px;
-			height: 20px;
-			background-color: #E4E3E9;
-			border: 0;
-			border-radius: 0;
-		}
+
 		#radioinput input{
 			width: 21px;
 			height: 30px;
@@ -203,26 +199,46 @@
 			border-radius: 4px;
 		}
 
+        #gender, #Role{
+            display: block;
+            width: 95%;
+        }
+
+        #gender > div, #Role > div{
+            text-align: center;
+            padding:15px;
+            height: 25px;
+        }
+
 		#gender input, #Role input{
 			width: 20px;
 		}
+
+        #gender label,#Role label{
+            font-size: 1.3em;
+        }
+
+        #dob select{
+            margin:10px 2%;
+        }
 		.born{
 			color: white;
 			background-color: #6B6F72;
 			height:30px;
-			width:100px;
+			width:36%;
+
 		}
 		.borndate{
 			color: white;
 			background-color: #6B6F72;
 			height:30px;
-			width:70px;
+			width:26%;
 		}
 		.borndyear{
 			color: white;
 			background-color: #6B6F72;
 			height:30px;
-			width:80px;
+			width:26%;
 		}
 		.radioinput{
 			width: 20px;
@@ -340,4 +356,53 @@
 
 input.field-failed{
     background-color: #E27171 !important;
+}
+
+.fbreg-fields input{
+    margin:10px 3%;
+}
+
+.fbreg-fields input[type="text"], .fbreg-fields input[type="password"],#finalreg input[type="text"],#finalreg input[type="password"]{
+    padding:12px 5%;
+    width:84%;
+}
+
+.fbreg-fields input[type="checkbox"],#regpanefinal input[type="checkbox"]{
+    height: 27px;
+    width: 27px;
+    margin-right:10px;
+}
+
+#fb-reg-pop #fb-userpic-prev{
+    width: 100%;
+    height: 350px;
+    padding: 0;
+    margin: 0;
+}
+
+#fb-reg-pop #fb-userpic-prev li{
+    width: 100%;
+    height: 100%;
+}
+
+#fb-reg-pop .next, #regpanefinal .next{
+    width: 100%;
+    height: 20px;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 1.7em;
+    color: white;
+}
+
+#regpanefinal input.next{
+    height: 50px;
+}
+#fb-reg-pop .field span.value{
+    position: relative;
+}
+
+#fb-reg-pop .field span.value .edit{
+    position: absolute;
+    top: 0;
+    right: 20px;
 }
