--- a/html_build/css/app.css
+++ b/html_build/css/app.css
@@ -77,11 +77,40 @@ header .logo {
 	float: left;
 	margin: 6px 0;
 }
-header a {
+header .account a.nav {
+    float: right;
 	color: white;
+    font-size: .9em;
+    display: inline-block;
+    margin:7px;
+    height: 90%;
+}
+header .account a.nav:hover{
+    text-decoration: underline;
 }
 header .account {
+    min-width: 300px;
 	float: right;
+    cursor: pointer;
+}
+div.header-dropdown {
+    line-height: 25px;
+    padding: 2px;
+    width: 200px;
+    max-width: 200px !important;
+    height: auto;
+    background-color: white;
+    color: #333;
+    box-shadow: 4px 4px 5px #333;
+    border: 1px solid #ccc;
+    font-size: 1em;
+}
+div.header-dropdown ul li{
+    padding:5px 0;
+    font-size: .8em;
+}
+div.header-dropdown ul li:hover{
+    text-decoration: underline;
 }
 header .account #userlogin {
 	position: relative;
@@ -91,19 +120,18 @@ header #header_logo {
 	height: 20px;
 }
 header .photo {
-	float: left;
-	margin-right: 10px;
+	float: right;
+	margin-left: 10px;
 }
 header .photo img {
 	width: 32px;
+    -webkit-border-radius: 16px;
+    border-radius: 16px;
+    -moz-border-radius: 16px;
 }
 header .userlinks {
-	float: left;
-	margin-top: 5px;
 }
 header .userlinks .dropdown-toggle {
-	min-width: 200px;
-	font-weight: bold;
 	color: #fff;
 }
 header .userlinks .dropdown-menu {
