--- a/html_build/pages/chrome/templates/header.html
+++ b/html_build/pages/chrome/templates/header.html
@@ -1,11 +1,11 @@
 
 <div class="row-fluid">
     <div class="logo" itemscope itemtype="http://schema.org/Organization">
-    {{#branding}}
+    <% if(branding){ %>
     <a class="brand" itemprop="url" title="Athletez Home Page"  href="http://www.athletez.com/#!home">
 	    <meta itemprop="name" content="Athletez.com - We're Athletez" />
 	    <meta itemprop="description" content="Athletez.com is an online community for athletes of all skill levels.  When you link up with your teams and sports organizations, upload and share photos and highlights, and follow the athletes you want to track, your athletic profile will automatically be created so others can see what's going on with you!" />
-		<meta itemprop="image" content="{{base_url}}{{src}}"/>
+		<meta itemprop="image" content="<%= branding.src %>"/>
 	    <div style="display:none;" itemprop="founder" itemscope itemtype="http://schema.org/Person">
 			<meta itemprop="name" content="Mike Wrather" />
 		    <meta itemprop="email" content="mike@athletez.com" />
@@ -16,47 +16,53 @@
 		    <meta itemprop="email" content="max@athletez.com" />
 		    <meta itemprop="jobTitle" content="Co-Founder" />
 	    </div>
-        <img itemprop="logo" src="{{base_url}}{{src}}" id="header_logo" alt="{{alt}}" />
+        <img itemprop="logo" src="<%= branding.src %>" id="header_logo" alt="<%= branding.alt %>" />
     </a>
-    {{/branding}}
+	<% } %>
     </div>
 
-    <div class="searchform"><!--
-    {{#search}}
-    <form action="/" method="post" class="form-inline">
-        <input class="input-search" name="s" placeholder="{{placeholder}}"/>    
-    </form>
-    {{/search}}-->
+    <div class="searchform">
+
     </div>
 
     <div class="account clearfix">
-        {{#authorized}}
-            <div class="photo"><img src="" alt="{{user_name}}"/></div>
-            <div class="userlinks dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown">{{user_name}} <b class="caret"></b></a>
-                <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-                    {{#nav}}
-                        <li><a href="{{link}}" {{#id}} id="{{id}}" {{/id}} {{#className}} class="{{className}}" {{/className}}>{{page}}</a></li>
-                    {{/nav}}
+        <% if(authorized){ %>
+            <div class="photo"><img src="" alt="<%= user_name %>"/></div>
 
-                </ul>
-            </div>
-        {{/authorized}}    
-        {{^authorized}}
-            <a href="{{login_url}}" id="userlogin">{{login_label}}</a>
-        {{/authorized}}    
+
+
+
+
+
+
+                    <% _.each(nav,function(element,index){
+
+	                console.log(element);
+	                console.log(element instanceof Array);
+
+	                if(element instanceof Array){
+	                  %>
+	                   <a class="nav nav_dropdown"><%= index %></a>
+	                    <ul class="header_menu hide" role="menu">
+	                         <% _.each(element,function(e2,index){ %>
+	                            <li><a href="<%= e2.link %>" ><%= e2.page %></a></li>
+	                        <% }); %>
+	                    </ul><%
+	                } else {
+	                    %><a class="nav"  href="<%= element.link %>" ><%= element.page %></a><%
+	                }
+	                %>
+
+                    <% }); %>
+
+
+
+
+
+
+	    <% }  else { %>
+            <a class="nav" href="<%=login_url %>" id="userlogin"><%=login_label %></a>
+	    <% } %>
     </div>
 </div>
 
-<!--
-{{^authorized}}
-<div class="row-fluid textright">
-    {{signup_social_label}} <a href="{{signup_facebook_link}}" class="signup-facebook">{{signup_facebook_label}}</a>
-	<a href="{{signup_email_link}}" class="signup-email">{{signup_email_label}}</a>
-</div>
-{{/authorized}} -->
-<!--
- <div class="alert global-alert"></div>
-<div class="alert alert-info global-messages"></div>
-<div class="alert alert-error global-errors"></div>
--->
