--- a/html/pages/home/templates/layout.html
+++ b/html/pages/home/templates/layout.html
@@ -5,6 +5,9 @@
 			Top Rated Profiles
 		</div>
 		<div id="top-rated" class="p-l-20 clearfix clear"></div>
+		<div class="green-left-heading">
+			Find Content
+		</div>
 		<div id="menu" class="p-l-20 clear"></div>
 		<div class="search-result-outer">
 
