--- a/html_build/pages/profilesetting/profilesettings.css
+++ b/html_build/pages/profilesetting/profilesettings.css
@@ -91,7 +91,7 @@
 }
 .org-sport-list-header .sport-name{ padding: 5px 0 5px 0; margin: 10px 0 10px 0; width: 100%; border-bottom:1px solid #b7b7b7;  font-size: .9em; }
 .org-sport-list-header .sport-name img{ margin-left:10px; margin-right: 10px; max-height: 30px; max-width: 40px; }
-.org-sport-list-header .add-sport > a, .org-sport-list-header .sport-name > a{ font-size: .6em; color: #515252; }
+.org-sport-list-header .add-sport > a, .org-sport-list-header .sport-name > a{ font-size: .9em; color: #515252; text-decoration: underline; }
 .org-sport-list-header input{
     margin:5px 20px 5px 20px;
 }
@@ -101,6 +101,11 @@
 .season-list > span .position-listing{margin-right: 10px;}
 .season-list > span .position-listing:after{ content: ', '; }
 .season-list > span .position-listing:last-child:after{ content: ''; }
+.season-list:hover{
+    -moz-box-shadow:    1px 1px 2px 2px #ccc;
+    -webkit-box-shadow: 1px 1px 2px 2px #ccc;
+    box-shadow:         1px 1px 2px 2px #ccc;
+}
 .section-team-list-detail > *, .section-team-list-detail-club > *, .section-individual-sports > *{
     margin: 25px 5% 0 5%;
 }
