--- a/html_build/css/app.css
+++ b/html_build/css/app.css
@@ -1305,7 +1305,8 @@ div.game-info span.game-header{
 }
 .container_batch_tag .dropdown {
 	height: 30px;
-	margin: 5px 0
+	margin: 5px 0;
+    min-width:250px;
 }
 .image-drop-area .drop-text {
 	margin-top: 25%;
